<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:title="@string/favorite"
        android:orderInCategory="50"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        app:showAsAction="ifRoom" />

    <item
...
