...
    <string name="tab_standing">Standings</string>
    <string name="tab_text_1">Last Match</string>
    <string name="tab_text_2">Next Match</string>
    <string name="match_events">Match Events</string>
    <string name="lineups">Line-ups</string>
    <string name="overviews">Overview</string>
    <string name="schedule">Schedule</string>
    <string name="age">AGE</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="follow">Follow</string>

    <string name="Players">Players</string>

    <string name="overview">The Premier League (often referred to as the English Premier League (EPL) outside England), is the top
            level of the English football league system. Contested by 20 clubs, it operates on a system of promotion
            and relegation with the English Football League (EFL). The Premier League is a corporation in which the
            member clubs act as shareholders. Seasons run from August to May with each team playing 38 matches
            (playing each other home and away). Most games are played on Saturday and Sunday afternoons. \nThe Premier
...

    <string name="title_dashboard">Dashboard</string>

    <string name="title_notifications">Notifications</string>
    <string name="competitions">Competitions</string>
    <string name="favorites">Favorites</string>
    <string name="match">Match</string>
    <string name="teams">Teams</string>
    <string name="team">Team</string>
    <string name="league">League</string>
    <string name="poster">Poster</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="colon">:</string>

...
    <string name="favorite">Favorite</string>
    <string name="team_badge">Team Badge</string>
    <string name="competitions_record">Competitions Record</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="drawn">Drawn</string>
    <string name="stadium">Stadium</string>
    <string name="jersey">Jersey</string>
    <string name="bullet">•</string>
    <string name="personal_information">Personal Information</string>
    <string name="country_of_birth">Country of Birth</string>
    <string name="nationality">Nationality</string>
    <string name="league_team">League Team</string>
...
