<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_player_media" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_player"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>